--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing = "20">
       <tr>
-        <td>    <img src="C:\Users\J_Hut\Desktop\udemy\HTML personal site\KwakBlog3-300x289.jpg" alt="sabrina kwak profile picture"></td>
+        <td>    <img src="KwakBlog3-300x289.jpg" alt="sabrina kwak profile picture"></td>
         <td>  <h1>Sabrina Kwak</h1>
           <p><em>astronaut at <strong>NASA</strong></em></p>
           <p>I love eggs.</p></td>
